@@ -33,7 +33,7 @@ import org.kiji.schema.util.ProtocolVersion;
  * locks.
  *
  * @see KijiMetaTable
- * @see KijiSystemTable
+ * @see KijiSchemaTable
  */
 @ApiAudience.Framework
 @Inheritance.Sealed
